2001-09-23  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (_wrap_gtk_clist_new_with_titles): return an
	int.
	(_wrap_gtk_tree_view_get_path_at_pos): same here.
	(_wrap_gtk_button_new): same here.
	(_wrap_gtk_toggle_button_new): same here.
	(_wrap_gtk_check_button_new): same here.
	(_wrap_gtk_radio_button_new): same here.
	(_wrap_gtk_list_item_new): same here.
	(_wrap_gtk_menu_item_new): same here.
	(_wrap_gtk_check_menu_item_new): same here.
	(_wrap_gtk_radio_menu_item_new): same here.
	(_wrap_gtk_ctree_new_with_titles): same here.
	(_wrap_gtk_dialog_new_with_buttons): same here.
	(_wrap_gtk_message_dialog_new): same here.
	(_wrap_gtk_message_dialog_new): same here.

	* gtk/gdk.override (_wrap_gdk_cursor_new): return an int.

	* pango.override (_wrap_pango_font_description_new): constructors
	return ints.

	* codegen/codegen.py (write_constructor): small hack to convert
	"return NULL;" to "return -1;" in constructors, as they should
	return ints.
	(write_boxed_constructor): same here.

2001-09-22  James Henstridge  <james@daa.com.au>

	* gtk/pygtk.h: remove traces of ExtensionClass.

	* gtk/libglade.override: s/PyExtensionClass/PyTypeObject/.

	* gtk/gtk-types.c (_pygtk_register_boxed_types): get rid of
	mentions of ExtensionClass.

	* gtk/gdk.override: s/PyExtensionClass/PyTypeObject/.

	* gtk/gtk.override: s/PyExtensionClass/PyTypeObject/.

	* gobjectmodule.c (pygobject_traverse): implement a traverse
	function for PyGObject.
	(PyGObject_Type): add GC support.
	(object_free): use PyObject_GC_Del to delete the memory.
	(pygobject_dealloc): stop GC tracking the object here.
	(pygobject_register_class): set a few more type fields here.
	(pygobject_new): use PyObject_GC_New to allocate the object here.
	(pygobject_dealloc): readd the 1-1 object/wrapper hack.  It should
	work as expected since adding GC support.

	* pango.override: s/PyExtensionClass/PyTypeObject/

	* codegen/codegen.py (consttmpl): constructor template returns an
	int.